plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
     id 'jacoco'
}

group = 'com.wetube'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

ext {
    versions = [
            nimbusJwt      : '10.0.1',
            dotenv         : '4.0.0',
            mapstruct      : '1.5.5.Final',
            lombokMapstruct: '0.2.0',
            mockitoJupiter : '5.12.0',
            h2             : '2.2.224',
            jjwt           : '0.12.6',
            jacoco         : '0.8.12'
    ]
}


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    configureEach {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot starters
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
    
    implementation "org.springframework.boot:spring-boot-starter-log4j2"
//    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
//    implementation 'redis.clients:jedis'
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.security:spring-security-oauth2-jose'
    implementation 'com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20240325.1'


    //Websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-json'

    // Database
    runtimeOnly 'com.mysql:mysql-connector-j'

    // JWT
    implementation "com.nimbusds:nimbus-jose-jwt:${versions.nimbusJwt}"
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // LiveKit
    implementation 'io.livekit:livekit-server:0.10.0'

    // Dotenv
    implementation "me.paulschwarz:spring-dotenv:${versions.dotenv}"

    // MapStruct + Lombok
    implementation "org.mapstruct:mapstruct:${versions.mapstruct}"
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor(
            'org.projectlombok:lombok',
            "org.mapstruct:mapstruct-processor:${versions.mapstruct}",
            "org.projectlombok:lombok-mapstruct-binding:${versions.lombokMapstruct}"
    )

    // Devtools
    developmentOnly "org.springframework.boot:spring-boot-devtools"

    // Testing
    testImplementation "org.springframework.boot:spring-boot-starter-test"   // JUnit 5, Mockito, AssertJ
    testImplementation "org.mockito:mockito-junit-jupiter:${versions.mockitoJupiter}"
    testImplementation "com.h2database:h2:${versions.h2}"

    // MapStruct in test
    testAnnotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${versions.mapstruct}"
    testCompileOnly 'org.projectlombok:lombok'

    implementation 'com.cloudinary:cloudinary-http44:1.32.2'

    // GeoLocate
    implementation 'com.maxmind.geoip2:geoip2:4.2.0'

    implementation 'org.springframework.boot:spring-boot-starter-websocket'



//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
}

test {
    useJUnitPlatform()
    testLogging {
        events 'FAILED', 'SKIPPED', 'PASSED'
        exceptionFormat = 'FULL'
        showStandardStreams = false
    }
    finalizedBy jacocoTestReport         // run report after finalizing test
}

jacoco {
    toolVersion = versions.jacoco
}

jacocoTestReport {
    dependsOn test
    reports {
        html.required = true
        xml.required  = true               // required for CI/Sonar
        csv.required  = false
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco')
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            element = 'CLASS'
            excludes = [
                    'com.wetube.dto.**',
                    'com.wetube.configuration.**',
                    'com.wetube.exception.**',
                    'com.wetube.Application'
            ]  // exclusion packages
            limit {
                counter = 'LINE'
                value   = 'COVEREDRATIO'
                minimum = 0                      // minimum coverage threshold
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification
